# Intuicio

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  anatomy-of-a-host.html  anatomy-of-a-script.html  building-custom-backend.html  building-custom-frontend.html  building-custom-runner.html  index.html  justfile  print.html  scripting-pipeline-explained.html  searchindex.js  searchindex.json  toc.html  toc.js
.github/workflows/: gh-pages.yml
backends/rust/: Cargo.toml
backends/rust/src/: host.rs  lib.rs
backends/vm/: Cargo.toml
backends/vm/src/: debugger.rs  lib.rs  scope.rs
benches/: Cargo.toml
benches/src/: access.rs  allocator.rs  div.rs  ecs.rs  fib.rs  main.rs  misc.rs  sqrt.rs
book/: book.toml
book/src/: README.md  SUMMARY.md  anatomy-of-a-host.md  anatomy-of-a-script.md  building-custom-backend.md  building-custom-frontend.md  building-custom-runner.md  scripting-pipeline-explained.md
book/src/official-frontends/: README.md
book/src/official-runners/: README.md
book/src/tutorial/: README.md  backend.md  frontend.md  runner.md
core/: Cargo.toml
core/src/: context.rs  function.rs  host.rs  lib.rs  object.rs  registry.rs  script.rs  struct_type.rs
data/: Cargo.toml
data/src/: data_heap.rs  data_stack.rs  lib.rs  lifetime.rs  managed.rs  shared.rs
demos/custom/: Cargo.toml
demos/custom/src/: backend.rs  frontend.rs  library.rs  main_backend.rs  main_frontend.rs  main_runner.rs
demos/emu/: Cargo.toml
demos/emu/resources/: justfile  main.iasm  manifest.toml  map.iasm  player.iasm
demos/emu/src/: cartridge.rs  library.rs  main_emulator.rs  main_packager.rs
demos/ffi/: Cargo.toml
demos/ffi/src/: lib.rs
demos/godot-node-graph/editor/: Editor.gd  Editor.tscn  NodeGraphClient.gd  SuggestionsPopup.gd  SuggestionsPopup.tscn  export_presets.cfg  project.godot
demos/godot-node-graph/server/: Cargo.toml
demos/plugin/: Cargo.toml
demos/plugin/src/: lib.rs
demos/stack-operator/: Cargo.toml
demos/stack-operator/src/: main.rs
demos/tetra/: Cargo.toml
demos/tetra/resources/: config.toml
demos/tetra/resources/data/: story.json
demos/tetra/resources/scripts/: game.simp  ui.simp
demos/tetra/resources/scripts/story/: action.simp  chapter.simp  character.simp  main.simp
demos/tetra/src/: config.rs  main.rs  scripting.rs
derive/: Cargo.toml
derive/src/: methods.rs  struct_type.rs
essentials/: Cargo.toml
essentials/src/: lib.rs
frameworks/arena/: Cargo.toml
frameworks/arena/src/: lib.rs
frameworks/dynamic/: Cargo.toml
frameworks/dynamic/src/: lib.rs
frameworks/ecs/: Cargo.toml
frameworks/ecs/examples/: 00_entities.rs  01_components.rs  02_resources.rs  03_systems.rs  04_queries.rs  05_scheduler.rs  06_lookups.rs  06_scheduler.rs  06_system_locals.rs  07_system_locals.rs  08_entity_relations.rs  09_actors.rs  09_command_buffer.rs  10_change_detection.rs  11_change_detection.rs  12_observer.rs  ecosystem.rs
frameworks/ecs/src/: actor.rs  archetype.rs  bundle.rs  commands.rs  entity.rs  lib.rs  multiverse.rs  observer.rs  prefab.rs  processor.rs  query.rs  resources.rs  scheduler.rs  systems.rs  universe.rs  world.rs
frameworks/oop/: Cargo.toml
frameworks/oop/src/: lib.rs
frameworks/pointer/: Cargo.toml
frameworks/pointer/src/: lib.rs
frameworks/serde/: Cargo.toml
frameworks/serde/src/: lib.rs
frameworks/text/: Cargo.toml
frameworks/text/src/: lib.rs
frameworks/value/: Cargo.toml
frameworks/value/src/: lib.rs
frontends/assembler/: Cargo.toml
frontends/assembler/src/: grammar.pest  lib.rs  parser.rs
frontends/mercury/: Cargo.toml
frontends/mercury/src/: lib.rs
frontends/serde/: Cargo.toml
frontends/serde/src/: lib.rs
frontends/simpleton/: Cargo.toml
frontends/simpleton/src/: grammar.pest  lib.rs  nodes.rs  parser.rs  script.rs
frontends/vault/: Cargo.toml
frontends/vault/src/: lib.rs
official-frontends/: index.html
official-frontends/assembler/: index.html
official-frontends/serde/: index.html
official-frontends/simpleton/: index.html  language-reference.html
official-frontends/simpleton/api-reference/: array.html  bytes.html  closure.html  console.html  debug.html  event.html  fs.html  index.html  iter.html  jobs.html  json.html  map.html  math.html  net.html  process.html  promise.html  reflect.html  text.html  toml.html
official-frontends/vault/: index.html
official-runners/: index.html
official-runners/alchemyst/: index.html
official-runners/alchemyst/api-reference/: color.html  image-pipeline.html  image.html  index.html  vec2.html
official-runners/simpleton/: index.html
platform/core/: Cargo.toml
platform/core/src/: context.rs  function.rs  host.rs  lib.rs  meta.pest  meta.rs  nativizer.rs  object.rs  registry.rs  script.rs  struct_type.rs  transformer.rs  utils.rs
platform/core/src/types/: enum_type.rs  mod.rs  struct_type.rs
platform/data/: Cargo.toml
platform/data/src/: data_heap.rs  data_stack.rs  lib.rs  lifetime.rs  managed.rs  managed_arena.rs  managed_box.rs  managed_gc.rs  shared.rs  type_hash.rs
platform/data/src/managed/: gc.rs  mod.rs  value.rs
platform/derive/: Cargo.toml
platform/derive/src/: enum_type.rs  function.rs  lib.rs  methods.rs  struct_type.rs
platform/ffi/: Cargo.toml
platform/ffi/src/: lib.rs
platform/nodes/: Cargo.toml
platform/parser/: Cargo.toml
platform/plugins/: Cargo.toml
plugins/: Cargo.toml
plugins/simpleton-ecs/: Cargo.toml
plugins/simpleton-http/: Cargo.toml
plugins/simpleton-renderer/: Cargo.toml
plugins/simpleton-rtree/: Cargo.toml
plugins/simpleton-window/: Cargo.toml
plugins/src/: lib.rs
resources/: adder.simp  package.iasm  package.lexpr  package.simp  package.vault
runners/alchemyst/: Cargo.toml  justfile
runners/simpleton/: Cargo.toml  justfile
tests/: Cargo.toml
tests/src/: derive.rs  ecs.rs  gc.rs  lib.rs  mod.rs  text.rs
tests/src/benches/: access.rs  allocator.rs  div.rs  fib.rs  misc.rs  mod.rs  processing.rs  sqrt.rs
tests/src/tests/: derive.rs  ecs.rs  gc.rs  mod.rs  text.rs
tutorial/: backend.html  frontend.html  index.html  runner.html
(+160 files in other folders)
