[workspace]
members = [
    "data",
    "core",
    "plugins",
    "derive",
    "tests",
    "backends/vm",
    "backends/rust",
    "frontends/serde",
    "frontends/assembler",
    "frontends/simpleton",
    "frontends/vault",
    "runners/simpleton",
    "runners/alchemyst",
    "demos/tetra",
    "demos/plugin",
    "demos/emu",
    "demos/stack-operator",
]
