[workspace]
members = [
    "platform/data",
    "platform/core",
    "platform/plugins",
    "platform/derive",
    "backends/vm",
    "backends/rust",
    "frontends/serde",
    "frontends/assembler",
    "frontends/simpleton",
    "frontends/vault",
    "plugins/simpleton-http",
    "runners/simpleton",
    "runners/alchemyst",
    "demos/tetra",
    "demos/plugin",
    "demos/emu",
    "demos/custom",
    "tests",
]
