[workspace]
members = [
    "platform/data",
    "platform/core",
    "platform/plugins",
    "platform/derive",
    "platform/nodes",
    "backends/vm",
    "backends/rust",
    "frontends/serde",
    "frontends/assembler",
    "frontends/simpleton",
    "frontends/vault",
    "plugins/simpleton-http",
    "plugins/simpleton-ecs",
    "plugins/simpleton-window",
    "plugins/simpleton-renderer",
    "runners/simpleton",
    "runners/alchemyst",
    "essentials",
    "demos/tetra",
    "demos/plugin",
    "demos/emu",
    "demos/custom",
    "demos/godot-node-graph/server",
    "tests",
]
