[package]
name = "benches"
version = "0.44.5"
edition = "2021"
publish = false

[features]
bench_access = []
bench_allocator = []
bench_div = []
bench_fib = []
bench_misc = []
bench_sqrt = []
bench_all = [
    "bench_access",
    "bench_allocator",
    "bench_div",
    "bench_fib",
    "bench_misc",
    "bench_sqrt",
]
default = ["bench_all"]

[dependencies]
intuicio-data = { version = "0.44", path = "../platform/data" }
intuicio-core = { version = "0.44", path = "../platform/core" }
intuicio-backend-vm = { version = "0.44", path = "../backends/vm" }
intuicio-frontend-vault = { version = "0.44", path = "../frontends/vault" }
rune = "*"
rune-modules = "*"
rhai = "*"
