[package]
name = "intuicio-essentials"
version = "0.49.1"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Essentials module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-essentials"
readme = "../README.md"

[features]
default = ["plugins", "vm"]
plugins = ["intuicio-plugins"]
vm = ["intuicio-backend-vm"]
typehash_debug_name = ["intuicio-data/typehash_debug_name"]

[dependencies]
intuicio-data = { version = "0.49", path = "../platform/data" }
intuicio-core = { version = "0.49", path = "../platform/core" }
intuicio-derive = { version = "0.49", path = "../platform/derive" }
intuicio-plugins = { version = "0.49", path = "../platform/plugins", optional = true }
intuicio-backend-vm = { version = "0.49", path = "../backends/vm", optional = true }
