[package]
name = "tests"
version = "0.49.2"
edition = "2024"
publish = false

[dependencies]
intuicio-data = { version = "0.49", path = "../platform/data" }
intuicio-core = { version = "0.49", path = "../platform/core" }
intuicio-derive = { version = "0.49", path = "../platform/derive" }
intuicio-framework-text = { version = "0.49", path = "../frameworks/text" }
gc = { version = "*", features = ["derive"] }
