[package]
name = "intuicio-backend-rust"
version = "0.5.0"
edition = "2021"
exclude = ["./resources/"]
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Rust backend module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-backend-rust"
readme = "../../README.md"

[dependencies]
intuicio-core = { version = "0.5", path = "../../core" }
serde = { version = "1", features = ["derive", "rc"] }
