[package]
name = "intuicio-backend-vm"
version = "0.43.0"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "VM backend module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-backend-vm"
readme = "../../README.md"

[dependencies]
intuicio-data = { version = "0.43", path = "../../platform/data" }
intuicio-core = { version = "0.43", path = "../../platform/core" }
serde = { version = "1", features = ["derive", "rc"] }
typid ="1"