[package]
name = "intuicio-backend-vm"
version = "0.48.8"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "VM backend module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-backend-vm"
readme = "../../README.md"

[features]
typehash_debug_name = ["intuicio-data/typehash_debug_name"]

[dependencies]
intuicio-data = { version = "0.48", path = "../../platform/data" }
intuicio-core = { version = "0.48", path = "../../platform/core" }
serde = { version = "1", features = ["derive", "rc"] }
typid ="1"