[package]
name = "custom"
version = "0.48.0"
edition = "2024"
publish = false

[[bin]]
name = "custom-frontend"
path = "src/main_frontend.rs"

[[bin]]
name = "custom-backend"
path = "src/main_backend.rs"

[[bin]]
name = "custom-runner"
path = "src/main_runner.rs"

[dependencies]
intuicio-data = { version = "0.48", path = "../../platform/data" }
intuicio-core = { version = "0.48", path = "../../platform/core" }
intuicio-derive = { version = "0.48", path = "../../platform/derive" }
intuicio-backend-vm = { version = "0.48", path = "../../backends/vm" }
