[package]
name = "emu"
version = "0.6.0"
edition = "2021"
publish = false

[[bin]]
name = "emulator"
path = "src/main_emulator.rs"

[[bin]]
name = "packager"
path = "src/main_packager.rs"

[dependencies]
intuicio-data = { version = "0.6", path = "../../platform/data" }
intuicio-core = { version = "0.6", path = "../../platform/core" }
intuicio-derive = { version = "0.6", path = "../../platform/derive" }
intuicio-backend-vm = { version = "0.6", path = "../../backends/vm" }
intuicio-frontend-assembler = { version = "0.6", path = "../../frontends/assembler" }
tetra = { version = "0.7", features = ["sdl2_bundled"] }
pot = "1"
toml = "0.7"
serde = "1"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
