[package]
name = "emu"
version = "0.31.5"
edition = "2021"
publish = false

[[bin]]
name = "emulator"
path = "src/main_emulator.rs"

[[bin]]
name = "packager"
path = "src/main_packager.rs"

[dependencies]
intuicio-data = { version = "0.31", path = "../../platform/data" }
intuicio-core = { version = "0.31", path = "../../platform/core" }
intuicio-derive = { version = "0.31", path = "../../platform/derive" }
intuicio-backend-vm = { version = "0.31", path = "../../backends/vm" }
intuicio-frontend-assembler = { version = "0.31", path = "../../frontends/assembler" }
tetra = { version = "0.8", features = ["sdl2_bundled"] }
pot = "3"
toml = "0.8"
serde = "1"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
send_wrapper = "0.6"