[package]
name = "plugin"
version = "0.42.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
intuicio-data = { version = "0.42", path = "../../platform/data" }
intuicio-core = { version = "0.42", path = "../../platform/core" }
intuicio-derive = { version = "0.42", path = "../../platform/derive" }
intuicio-frontend-simpleton = { version = "0.42", path = "../../frontends/simpleton" }
