[package]
name = "plugin"
version = "0.46.3"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
intuicio-data = { version = "0.46", path = "../../platform/data" }
intuicio-core = { version = "0.46", path = "../../platform/core" }
intuicio-derive = { version = "0.46", path = "../../platform/derive" }
intuicio-frontend-simpleton = { version = "0.46", path = "../../frontends/simpleton" }
