[package]
name = "plugin"
version = "0.49.1"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
intuicio-data = { version = "0.49", path = "../../platform/data" }
intuicio-core = { version = "0.49", path = "../../platform/core" }
intuicio-derive = { version = "0.49", path = "../../platform/derive" }
intuicio-frontend-simpleton = { version = "0.49", path = "../../frontends/simpleton" }
