[package]
name = "stack-operator"
version = "0.7.0"
edition = "2021"
publish = false

[dependencies]
intuicio-data = { version = "0.7", path = "../../platform/data" }
intuicio-core = { version = "0.7", path = "../../platform/core" }
intuicio-derive = { version = "0.7", path = "../../platform/derive" }
intuicio-backend-vm = { version = "0.7", path = "../../backends/vm" }
