[package]
name = "tetra-integration"
version = "0.35.0"
edition = "2021"
publish = false

[dependencies]
intuicio-data = { version = "0.35", path = "../../platform/data" }
intuicio-core = { version = "0.35", path = "../../platform/core" }
intuicio-derive = { version = "0.35", path = "../../platform/derive" }
intuicio-backend-vm = { version = "0.35", path = "../../backends/vm" }
intuicio-frontend-simpleton = { version = "0.35", path = "../../frontends/simpleton" }
tetra = { version = "0.8", features = ["sdl2_bundled"] }
toml = "0.8"
serde = "1"
