[package]
name = "tetra-integration"
version = "0.39.6"
edition = "2021"
publish = false

[dependencies]
intuicio-data = { version = "0.39", path = "../../platform/data" }
intuicio-core = { version = "0.39", path = "../../platform/core" }
intuicio-derive = { version = "0.39", path = "../../platform/derive" }
intuicio-backend-vm = { version = "0.39", path = "../../backends/vm" }
intuicio-frontend-simpleton = { version = "0.39", path = "../../frontends/simpleton" }
tetra = { version = "0.8", features = ["sdl2_bundled"] }
toml = "0.8"
serde = "1"
