[package]
name = "intuicio-framework-arena"
version = "0.43.0"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Arena allocator framework module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-framework-arena"
readme = "../../README.md"

[dependencies]
intuicio-data = { version = "0.43", path = "../../platform/data" }

