[package]
name = "intuicio-framework-arena"
version = "0.46.2"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Arena allocator framework module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-framework-arena"
readme = "../../README.md"

[dependencies]
intuicio-data = { version = "0.46", path = "../../platform/data" }
serde = { version = "1", features = ["derive"] }
