[package]
name = "intuicio-framework-ecs"
version = "0.34.0"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "ECS framework module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-framework-ecs"
readme = "../../README.md"

[dependencies]
intuicio-data = { version = "0.34", path = "../../platform/data" }
intuicio-core = { version = "0.34", path = "../../platform/core" }
intuicio-derive = { version = "0.34", path = "../../platform/derive" }
