[package]
name = "intuicio-framework-pointer"
version = "0.32.0"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Raw pointer framework module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-framework-dynamic"
readme = "../../README.md"

[dependencies]
intuicio-core = { version = "0.32", path = "../../platform/core" }

[dev-dependencies]
intuicio-data = { version = "0.32", path = "../../platform/data" }
intuicio-derive = { version = "0.32", path = "../../platform/derive" }
