[package]
name = "intuicio-framework-pointer"
version = "0.45.5"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Raw pointer framework module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-framework-dynamic"
readme = "../../README.md"

[dependencies]
intuicio-core = { version = "0.45", path = "../../platform/core" }

[dev-dependencies]
intuicio-data = { version = "0.45", path = "../../platform/data" }
intuicio-derive = { version = "0.45", path = "../../platform/derive" }
