[package]
name = "intuicio-framework-serde"
version = "0.49.3"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "(De)Serialization framework module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-framework-serde"
readme = "../../README.md"

[features]
typehash_debug_name = ["intuicio-data/typehash_debug_name"]

[dependencies]
intuicio-data = { version = "0.49", path = "../../platform/data" }
intuicio-core = { version = "0.49", path = "../../platform/core" }
serde-intermediate = { version = "1.6", default-features = false }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
intuicio-derive = { version = "0.49", path = "../../platform/derive" }
serde_json = "1"
