[package]
name = "intuicio-framework-text"
version = "0.39.0"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Text types framework module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-framework-text"
readme = "../../README.md"

[dependencies]
intuicio-core = { version = "0.39", path = "../../platform/core" }
intuicio-derive = { version = "0.39", path = "../../platform/derive" }
string-interner = "0.18"
lazy_static = "1.4"
