[package]
name = "intuicio-framework-value"
version = "0.51.0"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Type erased value framework module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-framework-value"
readme = "../../README.md"

[features]
typehash_debug_name = ["intuicio-data/typehash_debug_name"]

[dependencies]
intuicio-data = { version = "0.51", path = "../../platform/data" }
