[package]
name = "intuicio-frontend-assembler"
version = "0.48.2"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Assembly frontend module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-frontend-assembler"
readme = "../../README.md"

[dependencies]
intuicio-data = { version = "0.48", path = "../../platform/data" }
intuicio-core = { version = "0.48", path = "../../platform/core" }
intuicio-frontend-serde = { version = "0.48", path = "../serde" }
pest = "2.5"
pest_derive = "2.5"
snailquote = "0.3"

[dev-dependencies]
intuicio-backend-vm = { version = "0.48", path = "../../backends/vm" }
