[package]
name = "intuicio-frontend-mercury"
version = "0.25.0"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Mercury frontend module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-frontend-mercury"
readme = "../../README.md"

[dependencies]
intuicio-data = { version = "0.25", path = "../../platform/data" }
intuicio-core = { version = "0.25", path = "../../platform/core" }
pest = "2.5"
pest_derive = "2.5"
snailquote = "0.3"

[dev-dependencies]
intuicio-backend-vm = { version = "0.25", path = "../../backends/vm" }
