[package]
name = "intuicio-frontend-serde"
version = "0.37.1"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Serde frontend module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-frontend-serde"
readme = "../../README.md"

[dependencies]
intuicio-data = { version = "0.37", path = "../../platform/data" }
intuicio-core = { version = "0.37", path = "../../platform/core" }
intuicio-nodes = { version = "0.37", path = "../../platform/nodes" }
serde = { version = "1", features = ["derive", "rc"] }

[dev-dependencies]
intuicio-backend-vm = { version = "0.37", path = "../../backends/vm" }
serde-lexpr = "0.1"
