[package]
name = "intuicio-frontend-simpleton"
version = "0.4.0"
edition = "2021"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Simpleton frontend module for Intuicio scripting platform"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/intuicio"
repository = "https://github.com/PsichiX/intuicio"
documentation = "https://docs.rs/intuicio-frontend-simpleton"
readme = "../../README.md"

[features]
default = ["console", "fs", "process", "net", "jobs"]
console = []
fs = []
process = []
net = []
jobs = []

[dependencies]
intuicio-data = { version = "0.4", path = "../../data" }
intuicio-core = { version = "0.4", path = "../../core" }
intuicio-derive = { version = "0.4", path = "../../derive" }
pest = "2.5"
pest_derive = "2.5"
regex = "1"
serde_json = "1"
toml = "0.7"
byteorder = "1.4"
snailquote = "0.3"
rand = "0.8"
typid = "1"

[dev-dependencies]
intuicio-backend-vm = { version = "0.4", path = "../../backends/vm" }
